--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,11 +1,10 @@
-footer{
+footer {
 	position: fixed;
-	bottom: 0;
+	bottom: 0px;
 	background-color: #00FF00;
 	height: 60px;
 	width: 100%;
-}
-p{
+	margin:0px;
 	text-align: center;
 	vertical-align: center;
 }
