--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -6,4 +6,5 @@ header {
 	border-bottom: 1px solid #CCCCCC;
 	background-image: url(../images/logo.png);
 	background-repeat: no-repeat;
+	background-position: 20px;
 }
