--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -4,6 +4,8 @@ header {
     border-bottom: 1px solid #cccccc;
     display: flex;
     align-items: center;
+    background-image: url(../images/logo.png);
+    background-repeat: no-repeat;
 }
 
 header div {
@@ -16,7 +18,6 @@ header div {
 	width: 100%;
 	border-top: 1px, #CCCCCC;
 	border-bottom: 1px solid #CCCCCC;
-	background-image: url(../images/logo.png);
 	background-repeat: no-repeat;
 	background-position: 20px;
 }
