--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -37,12 +37,12 @@
     color: #FF5A5F;
     border: 4px solid #FF5A5F;
     border-radius: 50%;
-    max-width: 80px;
     min-width: 60px;
     height: 60px;
     font-size: 30px;
     text-align: center;
     line-height: 60px;
+    text-align: right-top;
 }
 .places article div.information {
     width: 100%;
@@ -64,7 +64,7 @@ div.information div.max_guest, div.information div.number_rooms, div.information
     line-height: 9em;
 }
 div.information div.max_guest {
-    background-image: url(../images/icon_group.png);
+    background-image: url(../images/icon_guest.png);
 }
 div.information div.number_rooms {
     background-image: url(../images/icon_bed.png);
